soup-body-output-stream: fix closing of chunked stream

When closing a chunked stream, we need to write the final 0-length
chunk. However, we can only do that if we successfully wrote the
previous chunk.

https://bugzilla.gnome.org/show_bug.cgi?id=703297